syntax = "proto3";

package api.common;

import "protoc-gen-openapiv2/options/annotations.proto";// swagger proto 包 path third_party


option go_package = "ghub/api/common;common";
option java_multiple_files = true;
option java_package = "api.common";

message AccountSimple {
	int32 id = 1[
		(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field)={
			description:"账号ID",
		}
	];
	string email = 2[
		(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field)={
			description:"邮箱地址",
		}
	];
	string username = 3[
		(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field)={
			description:"用户名",
		}
	];
	string phone = 4[
		(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field)={
			description:"手机号码",
		}
	];
}

message AuthToken{
		string accessToken = 1[
			(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field)={
				description:"jwt-token",
			}
		];
		string expireAt = 2[
			(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field)={
				description:"到期时间",
			}
		];
		string tokenType = 3[
			(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field)={
				description:"token 类型",
			}
		];
		string refreshToken = 4[
			(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field)={
				description:"刷新token",
			}
		];
		string refreshExoireAt = 5[
			(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field)={
				description:"刷新token 有效时间",
			}
		];
}